--- a/OperationQueue/View/Base.lproj/Main.storyboard
+++ b/OperationQueue/View/Base.lproj/Main.storyboard
@@ -33,6 +33,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="ikB-Tf-Mmn"/>
+                    <connections>
+                        <outlet property="tableView" destination="oMB-hR-fcl" id="RfA-gf-s19"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
