--- a/OperationQueue/View/Cell/TableViewCell.xib
+++ b/OperationQueue/View/Cell/TableViewCell.xib
@@ -12,14 +12,57 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCell" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="OperationQueue" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCell" rowHeight="80" id="KGk-i7-Jjw" customClass="TableViewCell" customModule="OperationQueue" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NO6-68-lqJ">
+                        <rect key="frame" x="4" y="4" width="312" height="71.5"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jhp-i8-h2M">
+                                <rect key="frame" x="4" y="7" width="58" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="58" id="ebS-Kj-soA"/>
+                                    <constraint firstAttribute="width" secondItem="Jhp-i8-h2M" secondAttribute="height" multiplier="1:1" id="upB-lQ-Wij"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nNn-Vv-SX6">
+                                <rect key="frame" x="70" y="25.5" width="38" height="20.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.87668152479999994" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Jhp-i8-h2M" firstAttribute="centerY" secondItem="NO6-68-lqJ" secondAttribute="centerY" id="YcK-d8-d5z"/>
+                            <constraint firstItem="Jhp-i8-h2M" firstAttribute="leading" secondItem="NO6-68-lqJ" secondAttribute="leading" constant="4" id="ZAl-DW-dgC"/>
+                            <constraint firstItem="nNn-Vv-SX6" firstAttribute="leading" secondItem="Jhp-i8-h2M" secondAttribute="trailing" constant="8" id="p4I-tF-Fpo"/>
+                            <constraint firstItem="nNn-Vv-SX6" firstAttribute="centerY" secondItem="NO6-68-lqJ" secondAttribute="centerY" id="zqw-jj-i3I"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <integer key="value" value="4"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="NO6-68-lqJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="6EO-ny-nA8"/>
+                    <constraint firstItem="NO6-68-lqJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="gFZ-2M-tCn"/>
+                    <constraint firstAttribute="bottom" secondItem="NO6-68-lqJ" secondAttribute="bottom" constant="4" id="tYc-6c-2rC"/>
+                    <constraint firstAttribute="trailing" secondItem="NO6-68-lqJ" secondAttribute="trailing" constant="4" id="zJK-t6-XzH"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="bannerImage" destination="Jhp-i8-h2M" id="zM1-j1-ljK"/>
+                <outlet property="titleLabel" destination="nNn-Vv-SX6" id="xeY-6U-bdx"/>
+            </connections>
+            <point key="canvasLocation" x="98.550724637681171" y="47.544642857142854"/>
         </tableViewCell>
     </objects>
 </document>
