--- a/OperationQueue/View/Cell/TableViewCell.xib
+++ b/OperationQueue/View/Cell/TableViewCell.xib
@@ -22,7 +22,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NO6-68-lqJ">
                         <rect key="frame" x="4" y="4" width="312" height="71.5"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jhp-i8-h2M">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Jhp-i8-h2M">
                                 <rect key="frame" x="4" y="7" width="58" height="58"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="58" id="ebS-Kj-soA"/>
